--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
           <h1 class="welcome-message" style="margin-top:1em; margin-bottom:1em">Hi, I'm Sinan!</h1>
           <hr class="title-hr">
           <h4 class="welcome-submessage" style="width: 50%; margin-left:25%; line-height:1.5em">
-            I am a sophomore at <b>the University of Michigan</b>, studying <b>Computer Science</b>, concentrations on Data Information
-            and AI, with a minor in <b>Statistics</b>. I am highly interested in the <b>accessibility</b> and <b>assistive technologies</b>, especially for neurodiversity.
+            I am a sophomore at <b>the University of Michigan</b>, studying <b>Computer Science</b>, with a minor in <b>Statistics</b>. I am highly interested in the intersection of AI and <b>accessibility</b> & <b>assistive technologies</b>, especially for neurodiversity.
           </h4>
           <br>
           <a href="file:///Users/sinankarabocuoglu/Desktop/Resumes/Resume_%20Sinan_Karabocuoglu.pdf" download>
