Fixed some size issues.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             I am a sophomore at <b>the University of Michigan</b>, studying <b>Computer Science</b>, with a minor in <b>Statistics</b>. I am highly interested in the intersection of AI and <b>accessibility</b> & <b>assistive technologies</b>, especially for neurodiversity.
           </h4>
           <br>
-          <a href="file:///Users/sinankarabocuoglu/Desktop/Resumes/Resume_%20Sinan_Karabocuoglu.pdf" download>
+          <a href="docs/Resume_ Sinan_Karabocuoglu.pdf" download>
             <button type="button" class="btn btn-outline-secondary resume-button">Resume</button>
           </a>
         </section><hr>
@@ -79,10 +79,14 @@
                       <ul>
                         <li>Boys Varisty Basketball Team</li>
                         <li>Co-founder of Career Development Club</li>
-                        <li>Co-founder of Manisa Gordes Community Involvement Project</li>
+                        <li>Co-founder of Gordes Community Involvement Project</li>
                         <li>Member at European Youth Parliament Club</li>
                       </ul>
                     </div>
+                  </div>
+                  <div class="school-images">
+                    <br><br><img src="images/robert_college.png" alt="robert_college"><br><br>
+                    <img src="images/umich.png" alt="umich">
                   </div>
                 <div class="card college">
                     <div class="card-body">
@@ -261,10 +265,10 @@
                           <p class="card-text"><small class="text-muted">React.js/Flask/MongoDB</small></p>
                         </div>
                       </div>
-                      <div class="card">
+                      <div class="card computer-assistance">
                           <img src="images/weaning.png" class="card-img-top" alt="weaning">
                           <div class="card-body">
-                            <h5 class="card-title">Computer Assistance in Weaning Process</h5>
+                            <h5 class="card-title">Computer Assistance in Weaning</h5>
                             <h6 class="card-title">University of Arkansas at Little Rock</h6>
                             <div class="project-settings-row">
                               <p>Jul - Aug 2017</p>
@@ -309,7 +313,7 @@
                 <div class="hobby-item hobby-3">Strategy & Card Games</div>
           </section><hr>
           <!--------------->
-          <!--Hobbies-->
+          <!--Contact-->
           <section id="contact">
               <br><br>
               <h1 class="contact-message" style="margin-top:1em; margin-bottom:1em">Contact Me!</h1>
