Fixed some responsiveness issues with 'Projects' section.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="styles/education.css">
     <link rel="stylesheet" href="styles/experience.css">
     <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" media="only screen and (max-width: 575px)" href="styles/projects-responsive.css">
     <link rel="stylesheet" href="styles/hobbies.css">
     <link rel="stylesheet" href="styles/contact.css">
 </head>
@@ -86,7 +87,7 @@
                   </div>
                   <div class="school-images">
                     <br><br><img src="images/robert_college.png" alt="robert_college"><br><br>
-                    <img src="images/umich.png" alt="umich">
+                    <img src="images/umich.png" alt="umich"><br><br>
                   </div>
                 <div class="card college">
                     <div class="card-body">
@@ -308,8 +309,8 @@
               <p class="hobbies-submessage" style="margin-top:1em; margin-bottom:1em">Click on the bubbles to see more details!</p>
               <hr class="title-hr">
               <div class="hobbies-list">
-                <div class="hobby-item hobby-1">Superhero Enthusiast</div>
-                <div class="hobby-item hobby-2">Sports Fan</div>
+                <div class="hobby-item hobby-1">Superhero Enthusiast</div><br>
+                <div class="hobby-item hobby-2">Sports Fan</div><br>
                 <div class="hobby-item hobby-3">Strategy & Card Games</div>
           </section><hr>
           <!--------------->
