Summer 2021 update without resume.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h1 class="welcome-message" style="margin-top:1em; margin-bottom:1em">Hi, I'm Sinan!</h1>
           <hr class="title-hr">
           <h4 class="welcome-submessage" style="width: 50%; margin-left:25%; line-height:1.5em">
-            I am a sophomore at <b>the University of Michigan</b>, studying <b>Computer Science</b>, with a minor in <b>Statistics</b>. I am highly interested in the intersection of AI and <b>accessibility</b> & <b>assistive technologies</b>, especially for neurodiversity.
+            I am a senior at the <b>University of Michigan</b>, studying <b>Computer Science</b>, with specializations in <b>"Data and Information"</b> & <b>"Software Systems"</b> alongside a History minor. I am highly interested in <b>accessibility</b> & <b>assistive technologies</b> and <b>ML</b>, especially their applications in <b>urban planning</b> for <b>neurodiversity</b>.
           </h4>
           <br>
           <a href="docs/Resume_ Sinan_Karabocuoglu.pdf" download>
@@ -78,10 +78,10 @@
                       <p class="card-text">GPA: 4.0/4.0</p>
                       <p class="card-text"><u>Activities</u></p>
                       <ul>
-                        <li>Boys Varisty Basketball Team</li>
-                        <li>Co-founder of Career Development Club</li>
-                        <li>Co-founder of Gordes Community Involvement Project</li>
-                        <li>Member at European Youth Parliament Club</li>
+                        Boys Varisty Basketball Team<br>
+                        Co-founder of Career Development Club<br>
+                        Co-founder of Gordes Community Involvement Project<br>
+                        Member at European Youth Parliament Club<br>
                       </ul>
                     </div>
                   </div>
@@ -93,13 +93,13 @@
                     <div class="card-body">
                       <h5 class="card-title">University of Michigan, Ann Arbor</h5>
                       <h6 class="card-title">2018-Present</h6>
-                      <p class="card-text">GPA: 3.7/4.0</p>
+                      <p class="card-text">GPA: 3.77/4.0</p>
                       <p class="card-text"><u>Activities</u></p>
                       <ul>
-                        <li>Alpha Kappa Psi Professional Business Fraternity</li>
-                        <li>Software Developer in Michigan Investment Group</li>
-                        <li>Michigan Data Science Team</li>
-                        <li>Michigan International Students Society</li>
+                        <a href="https://www.akpsi-phi.com/">Alpha Kappa Psi</a> Professional Business Fraternity<br>
+                        <a href="https://www.michiganinvestmentgroup.com/">Michigan Investment Group</a><br>
+                        <a href="https://www.mdst.club/">Michigan Data Science Team</a><br>
+                        <a href="http://missumich.org/">Michigan International Students Society</a><br>
                       </ul>                      
                     </div>
                 </div>
@@ -109,12 +109,13 @@
                     <div class="card bg-light mb-3">
                         <div class="card-header">Awards and Honors</div>
                         <div class="card-body">
-                          <ul>
-                            <li>AP Scholar with Distinction (2017)</li>
-                            <li>University Honors (F18, W19)</li>
-                            <li>hackNY 2019 Fellow</li>
-                            <li>Turkish Representative of European Youth Parliament and WINPEACE</li>
-                            </ul> 
+                          <p>
+                            <a href="https://hkn.eecs.umich.edu/">IEEE-Eta Kappa Nu</a> Honor Society<br><br>
+                            AP Scholar with Distinction<br><br>
+                            University Honors<br><br>
+                            <a href="https://hackny.org/">HackNY</a> 2019 Fellow<br><br>
+                            Turkish Representative of European Youth Parliament and WINPEACE
+                          </p> 
                         </div>
                       </div>
                 </div>
@@ -124,25 +125,27 @@
                         <div class="card-body skills-list">
                           <div class="skills-list-experienced">
                             <p><u>Experienced</u></p>
-                            <ul>
-                              <li>Java</li>
-                              <li>Python</li>
-                              <li>C++</li>
-                              <li>JavaScript</li>
-                              <li>EmberJS</li>
-                              <li>ReactJS</li>
-                              <li>PostgreSQL</li>
-                            </ul> 
+                            <p>
+                              Java<br>
+                              Python<br>
+                              C++<br>
+                              AWS Glue<br>
+                              AWS Lambda<br>
+                              Amazon S3<br>
+                              Amazon Athena<br>
+                              Amazon Cloud Formation Kit<br>
+                            </p> 
                           </div>
                           <div class="skills-list-familiar">
                               <p><u>Familiar</u></p>
-                              <ul>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>AWS</li>
-                                <li>Flask</li>
-                                <li>Pandas</li>
-                              </ul> 
+                              <p>
+                                TypeScript<br>
+                                JavaScript<br>
+                                R<br>
+                                Apache Spark<br>
+                                Pandas<br>
+                                SQL<br>
+                              </p> 
                             </div>
                         </div>
                       </div>
@@ -151,13 +154,15 @@
                     <div class="card bg-light mb-3">
                         <div class="card-header">Courses</div>
                         <div class="card-body">
-                          <ul>
-                            <li>MATH 215: Multivariable and Vector Calculus</li>
-                            <li>EECS 203: Discrete Math</li>
-                            <li>EECS 280: Programming and Introductory Data Structures</li>
-                            <li>EECS 281: Data Structures and Algorithms (Current)</li>
-                            <li>MATH 214: Applied Linear Algebra (Current)</li>
-                            </ul> 
+                          <p>
+                            EECS 440: System Design of a Search Engine<br>
+                            EECS 445: Introduction to Machine Learning(Current)<br>
+                            EECS 482: Introduction to Operating Systems<br>
+                            EECS 484: Database Management Systems<br>
+                            EECS 489: Computer Networks(Current)<br>
+                            STATS 425: Introduction to Probability<br>
+                            MATH 214: Applied Linear Algebra<br>
+                          </p> 
                         </div>
                       </div>
                 </div>
@@ -212,22 +217,23 @@
                       </div>
                       <div class="carousel-item">
                           <div class="media experience-item">
-                              <img src="images/mig.png" class="mr-3" alt="mig">
+                              <img src="images/amazon.jpg" class="mr-3" alt="mig">
                               <div class="media-body">
                                 <div class="experience-row">
-                                <h5 class="mt-0">Michigan Investment Group</h5>
-                                <h5 class="mt-0">Ann Arbor, MI</h5>
+                                <h5 class="mt-0">Amazon</h5>
+                                <h5 class="mt-0">New York, NY</h5>
                               </div>
-                                <h6 class="mt-0">Algorithmic Trading Software Developer</h6>
-                                <h6 class="mt-0">Jan 2019-Present</h6>
+                                <h6 class="mt-0">Software Development Engineering Intern</h6>
+                                <h6 class="mt-0">May - Aug 2020</h6>
                                 <ul>
-                                  <li>Implemented Security Shorting and Covering the Shorted Securities features of a backtesting software for testing several trading algorithms in a live market environment</li>
-                                  <li>Collected old market data for several stocks from web and pre-processed using Python data science libraries such as Pandas and NumPy for simulating past market activity</li>
-                                  <li>Worked on an animated visualization trading algorithms performance with Python Matplotlib library, significantly improving quality of security pitches</li>
+                                  <li>Fashion Detail Page Latency Team</li>
+                                </ul>
+                                <h6 class="mt-0">Jun - Aug 2021</h6>
+                                <ul>
+                                  <li>Fashion Discovery Team</li>
                                 </ul>
                           </div>
                       </div>
-                      <a href="http://umich.edu/~migroup/"><button type="button" class="btn btn-outline-primary">Website</button></a>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -251,9 +257,27 @@
               <h1 class="projects-message" style="margin-top:1em; margin-bottom:1em">My Projects</h1>
               <hr class="title-hr">
               <div class="projects-list">
+                <div class="card-group">
+                  <div class="card computer-assistance">
+                      <div class="card-body">
+                        <h5 class="card-title">Multi-threaded Internet Search Engine</h5>
+                        <h6 class="card-title">University of Michigan Capstone Course</h6>
+                        <div class="project-settings-row">
+                          <p>Jan - Apr 2021</p>
+                          <p>Ann Arbor, MI</p>
+                        </div>
+                        <p class="card-text">Built an index (~200M websites and ~1 TB total size) including serialization/deserialization mechanisms for data compression with another teammate.<br> 
+                          Implemented a constraint solver that will efficiently scan our entire index and find potential matching pages to user query.<br>
+                          Created a query compiler, which creates a logical relationship tree of terms in the user query that the constraint solver will use to scan web pages.<br> 
+                          Designed a multi-threaded network communication channel between our ranker and tiny server to show the results to users.<br> 
+                          Final search engine was distributed over 10 cloud machines and can serve to multiple users in parallel with an average of 1-2 minutes response time.<br>
+                          The entire project was completed with a team of 6.</p>
+                        <p class="card-text"><small class="text-muted">C++</small></p>
+                    </div>
+                  </div>
+                </div>
                   <div class="card-group">
                       <div class="card">
-                        <img src="images/database.png" class="card-img-top" alt="database">
                         <div class="card-body">
                           <h5 class="card-title">Brotherhood Database</h5>
                           <h6 class="card-title">Alpha Kappa Psi Business Fraternity</h6>
@@ -266,32 +290,16 @@
                           <p class="card-text"><small class="text-muted">React.js/Flask/MongoDB</small></p>
                         </div>
                       </div>
-                      <div class="card computer-assistance">
-                          <img src="images/weaning.png" class="card-img-top" alt="weaning">
-                          <div class="card-body">
-                            <h5 class="card-title">Computer Assistance in Weaning</h5>
-                            <h6 class="card-title">University of Arkansas at Little Rock</h6>
-                            <div class="project-settings-row">
-                              <p>Jul - Aug 2017</p>
-                              <p>Little Rock, AR</p>
-                            </div>
-                            <p class="card-text">Created software tool in Java that uses input buffer to access to patient records in local files, and calculate progression grades based on weaning process scoring formula, 
-                              aiming to shorten checkup round duration by 30 percent in pediatric intensive care units</p>
-                            <p class="card-text"><small class="text-muted">Java</small></p>
-                        </div>
-                      </div>
                       <div class="card">
-                          <img src="images/tracking.png" class="card-img-top" alt="tracking">
-                          <div class="card-body">
-                            <h5 class="card-title">Patient Tracking System</h5>
-                            <h6 class="card-title">Bakirkoy Psychiatric Hospital</h6>
+                        <div class="card-body">
+                            <h5 class="card-title">Backtesting Software</h5>
+                            <h6 class="card-title">Michigan Investment Group</h6>
                             <div class="project-settings-row">
-                              <p>Oct - Nov 2016</p>
-                              <p>Istanbul, Turkey</p>
+                              <p>Jan - Sep 2019</p>
+                              <p>Ann Arbor, MI</p>
                             </div>
-                            <p class="card-text">Coded patient tracking software in Python to access patient records in local directories
-                                via a GUI platform using OS module, raising therapy sessions’ capacity from 26 to 100+</p>
-                            <p class="card-text"><small class="text-muted">Python/Tkinter</small></p>
+                            <p class="card-text">Implemented Security Shorting and Covering the Shorted Securities features of a backtesting software for testing several trading algorithms in a live market environment</p>
+                            <p class="card-text"><small class="text-muted">Python/Pandas</small></p>
                         </div>
                       </div>
                     </div>
